[package]
name = "jsonwebtoken"
version = "1.1.6"
authors = ["Vincent Prouillet <vincent@wearewizards.io>"]
license = "MIT"
readme = "README.md"
description = "Create and parse JWT in a strongly typed way."
homepage = "https://github.com/Keats/rust-jwt"
repository = "https://github.com/Keats/rust-jwt"
keywords = ["jwt", "web", "api", "token", "json"]

[dependencies]
error-chain = "0.9"
serde_json = "0.9"
serde_derive = "0.9"
serde = "0.9"
ring = "0.6"
base64 = "0.4"
